--- a/notebooks/methods/USGS-data-retrieval-1.ipynb
+++ b/notebooks/methods/USGS-data-retrieval-1.ipynb
@@ -256,6 +256,256 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Download the data of filtered sites"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>agency_cd</th>\n",
+       "      <th>site_no</th>\n",
+       "      <th>station_nm</th>\n",
+       "      <th>site_tp_cd</th>\n",
+       "      <th>dec_lat_va</th>\n",
+       "      <th>dec_long_va</th>\n",
+       "      <th>coord_acy_cd</th>\n",
+       "      <th>dec_coord_datum_cd</th>\n",
+       "      <th>alt_va</th>\n",
+       "      <th>alt_acy_va</th>\n",
+       "      <th>alt_datum_cd</th>\n",
+       "      <th>huc_cd</th>\n",
+       "      <th>geometry</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>USGS</td>\n",
+       "      <td>09107000</td>\n",
+       "      <td>TAYLOR RIVER AT TAYLOR PARK, CO.</td>\n",
+       "      <td>ST</td>\n",
+       "      <td>38.860271</td>\n",
+       "      <td>-106.566697</td>\n",
+       "      <td>S</td>\n",
+       "      <td>NAD83</td>\n",
+       "      <td>9340.00</td>\n",
+       "      <td>10.0</td>\n",
+       "      <td>NGVD29</td>\n",
+       "      <td>14020001</td>\n",
+       "      <td>POINT (-106.56670 38.86027)</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>USGS</td>\n",
+       "      <td>09107500</td>\n",
+       "      <td>TEXAS CREEK AT TAYLOR PARK, CO</td>\n",
+       "      <td>ST</td>\n",
+       "      <td>38.846944</td>\n",
+       "      <td>-106.554639</td>\n",
+       "      <td>5</td>\n",
+       "      <td>NAD83</td>\n",
+       "      <td>9380.00</td>\n",
+       "      <td>10.0</td>\n",
+       "      <td>NGVD29</td>\n",
+       "      <td>14020001</td>\n",
+       "      <td>POINT (-106.55464 38.84694)</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>USGS</td>\n",
+       "      <td>09108250</td>\n",
+       "      <td>WILLOW CREEK ABOVE TAYLOR PARK RESERVOIR, CO.</td>\n",
+       "      <td>ST</td>\n",
+       "      <td>38.817936</td>\n",
+       "      <td>-106.560750</td>\n",
+       "      <td>F</td>\n",
+       "      <td>NAD83</td>\n",
+       "      <td>9368.00</td>\n",
+       "      <td>1.6</td>\n",
+       "      <td>NAVD88</td>\n",
+       "      <td>14020001</td>\n",
+       "      <td>POINT (-106.56075 38.81794)</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>USGS</td>\n",
+       "      <td>09109000</td>\n",
+       "      <td>TAYLOR RIVER BELOW TAYLOR PARK RESERVOIR, CO.</td>\n",
+       "      <td>ST</td>\n",
+       "      <td>38.818327</td>\n",
+       "      <td>-106.609198</td>\n",
+       "      <td>F</td>\n",
+       "      <td>NAD83</td>\n",
+       "      <td>9169.67</td>\n",
+       "      <td>15.0</td>\n",
+       "      <td>NGVD29</td>\n",
+       "      <td>14020001</td>\n",
+       "      <td>POINT (-106.60920 38.81833)</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>USGS</td>\n",
+       "      <td>09110000</td>\n",
+       "      <td>TAYLOR RIVER AT ALMONT, CO.</td>\n",
+       "      <td>ST</td>\n",
+       "      <td>38.664437</td>\n",
+       "      <td>-106.845317</td>\n",
+       "      <td>F</td>\n",
+       "      <td>NAD83</td>\n",
+       "      <td>8010.76</td>\n",
+       "      <td>15.0</td>\n",
+       "      <td>NGVD29</td>\n",
+       "      <td>14020001</td>\n",
+       "      <td>POINT (-106.84532 38.66444)</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "  agency_cd   site_no                                     station_nm  \\\n",
+       "0      USGS  09107000               TAYLOR RIVER AT TAYLOR PARK, CO.   \n",
+       "1      USGS  09107500                 TEXAS CREEK AT TAYLOR PARK, CO   \n",
+       "2      USGS  09108250  WILLOW CREEK ABOVE TAYLOR PARK RESERVOIR, CO.   \n",
+       "3      USGS  09109000  TAYLOR RIVER BELOW TAYLOR PARK RESERVOIR, CO.   \n",
+       "4      USGS  09110000                    TAYLOR RIVER AT ALMONT, CO.   \n",
+       "\n",
+       "  site_tp_cd  dec_lat_va  dec_long_va coord_acy_cd dec_coord_datum_cd  \\\n",
+       "0         ST   38.860271  -106.566697            S              NAD83   \n",
+       "1         ST   38.846944  -106.554639            5              NAD83   \n",
+       "2         ST   38.817936  -106.560750            F              NAD83   \n",
+       "3         ST   38.818327  -106.609198            F              NAD83   \n",
+       "4         ST   38.664437  -106.845317            F              NAD83   \n",
+       "\n",
+       "    alt_va  alt_acy_va alt_datum_cd    huc_cd                     geometry  \n",
+       "0  9340.00        10.0       NGVD29  14020001  POINT (-106.56670 38.86027)  \n",
+       "1  9380.00        10.0       NGVD29  14020001  POINT (-106.55464 38.84694)  \n",
+       "2  9368.00         1.6       NAVD88  14020001  POINT (-106.56075 38.81794)  \n",
+       "3  9169.67        15.0       NGVD29  14020001  POINT (-106.60920 38.81833)  \n",
+       "4  8010.76        15.0       NGVD29  14020001  POINT (-106.84532 38.66444)  "
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "sites_within_basin.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(                                           00060_Mean 00060_Mean_cd\n",
+       " site_no         datetime                                           \n",
+       " 09107000        2010-01-01 00:00:00+00:00        44.3          A, e\n",
+       "                 2010-01-02 00:00:00+00:00        46.8          A, e\n",
+       "                 2010-01-03 00:00:00+00:00        45.9          A, e\n",
+       "                 2010-01-04 00:00:00+00:00        45.0          A, e\n",
+       "                 2010-01-05 00:00:00+00:00        48.3          A, e\n",
+       " ...                                               ...           ...\n",
+       " 385106106571000 2023-01-28 00:00:00+00:00   -999999.0        P, Ice\n",
+       "                 2023-01-29 00:00:00+00:00   -999999.0        P, Ice\n",
+       "                 2023-01-30 00:00:00+00:00   -999999.0        P, Ice\n",
+       "                 2023-01-31 00:00:00+00:00   -999999.0        P, Ice\n",
+       "                 2023-02-01 00:00:00+00:00   -999999.0        P, Ice\n",
+       " \n",
+       " [83188 rows x 2 columns],\n",
+       " <dataretrieval.utils.Metadata at 0x7f9598bfeac0>)"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "siteINFO = nwis.get_dv(sites=sites_within_basin['site_no'], parameterCd=\"00060\", start=startDt, end=endDt)\n",
+    "siteINFO"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "Empty DataFrame\n",
+       "Columns: []\n",
+       "Index: []"
+      ]
+     },
+     "execution_count": 42,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "siteINFO[0].groupby('site_no').apply(lambda gp: gp.to_csv(Path(f\"../../data/usgs_insitu/{gp.index[0][0]}.csv\")))"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
