add from https://github.com/pritamd47/ReservoirNetwork

--- a/notebooks/methods/vic-calibration.ipynb
+++ b/notebooks/methods/vic-calibration.ipynb
@@ -1229,7 +1229,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -2342,7 +2341,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -2356,9 +2355,8 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.13"
+   "version": "3.9.16"
   },
-  "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
     "hash": "16808cc64ed4f9ec8ff9c489d3e428808d1b7645ba1705e6ce030031806cb338"
@@ -2366,5 +2364,5 @@
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
