--- a/notebooks/methods/USGS-data-retrieval-1.ipynb
+++ b/notebooks/methods/USGS-data-retrieval-1.ipynb
@@ -266,7 +266,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -526,7 +525,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -542,7 +541,6 @@
    "pygments_lexer": "ipython3",
    "version": "3.9.16"
   },
-  "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
     "hash": "986d712252a4e340416cd71356f3b849d5d43bbc7ba4b6f32be859e838fb9496"
@@ -550,5 +548,5 @@
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
