--- a/notebooks/methods/01-USGS-data-retrieval-1.ipynb
+++ b/notebooks/methods/01-USGS-data-retrieval-1.ipynb
@@ -525,7 +525,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -539,11 +539,11 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.16"
+   "version": "3.10.9"
   },
   "vscode": {
    "interpreter": {
-    "hash": "986d712252a4e340416cd71356f3b849d5d43bbc7ba4b6f32be859e838fb9496"
+    "hash": "4b8c3a16aaf85adb3ca8a1f18e5810b57687b3d06c4b994ba211aab8278e804c"
    }
   }
  },
