storing record of assigned names

--- a/notebooks/methods/02-RAT-USGS.ipynb
+++ b/notebooks/methods/02-RAT-USGS.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -90,7 +90,7 @@
        "3    1   Silver Jack -107.540387  38.230238"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -103,7 +103,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -257,7 +257,7 @@
        "4  POINT (-106.8453172 38.66443715)  "
       ]
      },
-     "execution_count": 5,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -271,7 +271,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -303,34 +303,43 @@
        "23    OLD00\n",
        "24    GUN03\n",
        "25    SLA00\n",
-       "Name: rat_name, dtype: object"
+       "Name: assigned_name, dtype: object"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# since the name cannot be very long, we'll have to generate unique names for the stations\n",
-    "usgs_stations['rat_name'] = '-'\n",
+    "usgs_stations['assigned_name'] = '-'\n",
     "for i, row in usgs_stations.iterrows():\n",
     "    name = row['station_nm'][:3]\n",
-    "    count = sum([name in rat_name for rat_name in usgs_stations['rat_name']])\n",
-    "    rat_name = f\"{name}{count:02}\"\n",
-    "    usgs_stations.loc[i, 'rat_name'] = rat_name\n",
-    "usgs_stations['rat_name']"
+    "    count = sum([name in assigned_name for assigned_name in usgs_stations['assigned_name']])\n",
+    "    assigned_name = f\"{name}{count:02}\"\n",
+    "    usgs_stations.loc[i, 'assigned_name'] = assigned_name\n",
+    "usgs_stations['assigned_name']"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "usgs_stations.to_csv(usgs_fn.with_name(\"usgs_gages_with_rat_names.csv\"))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
     "# dataframe to append to rat_stations\n",
-    "usgs_stns_ratfmt = usgs_stations[['rat_name', 'dec_lat_va', 'dec_long_va']].rename({\n",
-    "    'rat_name': 'name',\n",
+    "usgs_stns_ratfmt = usgs_stations[['assigned_name', 'dec_lat_va', 'dec_long_va']].rename({\n",
+    "    'assigned_name': 'name',\n",
     "    'dec_lat_va': 'lat',\n",
     "    'dec_long_va': 'lon',\n",
     "}, axis=1)\n",
@@ -339,7 +348,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -618,7 +627,7 @@
        "25    1         SLA00 -106.953377  38.851659"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
