removed saving of index

--- a/notebooks/methods/02-RAT-USGS.ipynb
+++ b/notebooks/methods/02-RAT-USGS.ipynb
@@ -271,7 +271,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -306,7 +306,7 @@
        "Name: assigned_name, dtype: object"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -324,11 +324,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "usgs_stations.to_csv(usgs_fn.with_name(\"usgs_gages_with_assigned_names.csv\"))"
+    "usgs_stations.to_csv(usgs_fn.with_name(\"usgs_gages_with_assigned_names.csv\"), index=False)"
    ]
   },
   {
