reading site_no as str

--- a/notebooks/methods/02-RAT-USGS.ipynb
+++ b/notebooks/methods/02-RAT-USGS.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -90,7 +90,7 @@
        "3    1   Silver Jack -107.540387  38.230238"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -103,7 +103,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -146,7 +146,7 @@
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>USGS</td>\n",
-       "      <td>9107000</td>\n",
+       "      <td>09107000</td>\n",
        "      <td>TAYLOR RIVER AT TAYLOR PARK, CO.</td>\n",
        "      <td>ST</td>\n",
        "      <td>38.860271</td>\n",
@@ -162,7 +162,7 @@
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>USGS</td>\n",
-       "      <td>9107500</td>\n",
+       "      <td>09107500</td>\n",
        "      <td>TEXAS CREEK AT TAYLOR PARK, CO</td>\n",
        "      <td>ST</td>\n",
        "      <td>38.846944</td>\n",
@@ -178,7 +178,7 @@
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>USGS</td>\n",
-       "      <td>9108250</td>\n",
+       "      <td>09108250</td>\n",
        "      <td>WILLOW CREEK ABOVE TAYLOR PARK RESERVOIR, CO.</td>\n",
        "      <td>ST</td>\n",
        "      <td>38.817936</td>\n",
@@ -194,7 +194,7 @@
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>USGS</td>\n",
-       "      <td>9109000</td>\n",
+       "      <td>09109000</td>\n",
        "      <td>TAYLOR RIVER BELOW TAYLOR PARK RESERVOIR, CO.</td>\n",
        "      <td>ST</td>\n",
        "      <td>38.818327</td>\n",
@@ -210,7 +210,7 @@
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>USGS</td>\n",
-       "      <td>9110000</td>\n",
+       "      <td>09110000</td>\n",
        "      <td>TAYLOR RIVER AT ALMONT, CO.</td>\n",
        "      <td>ST</td>\n",
        "      <td>38.664437</td>\n",
@@ -228,12 +228,12 @@
        "</div>"
       ],
       "text/plain": [
-       "  agency_cd  site_no                                     station_nm  \\\n",
-       "0      USGS  9107000               TAYLOR RIVER AT TAYLOR PARK, CO.   \n",
-       "1      USGS  9107500                 TEXAS CREEK AT TAYLOR PARK, CO   \n",
-       "2      USGS  9108250  WILLOW CREEK ABOVE TAYLOR PARK RESERVOIR, CO.   \n",
-       "3      USGS  9109000  TAYLOR RIVER BELOW TAYLOR PARK RESERVOIR, CO.   \n",
-       "4      USGS  9110000                    TAYLOR RIVER AT ALMONT, CO.   \n",
+       "  agency_cd   site_no                                     station_nm  \\\n",
+       "0      USGS  09107000               TAYLOR RIVER AT TAYLOR PARK, CO.   \n",
+       "1      USGS  09107500                 TEXAS CREEK AT TAYLOR PARK, CO   \n",
+       "2      USGS  09108250  WILLOW CREEK ABOVE TAYLOR PARK RESERVOIR, CO.   \n",
+       "3      USGS  09109000  TAYLOR RIVER BELOW TAYLOR PARK RESERVOIR, CO.   \n",
+       "4      USGS  09110000                    TAYLOR RIVER AT ALMONT, CO.   \n",
        "\n",
        "  site_tp_cd  dec_lat_va  dec_long_va coord_acy_cd dec_coord_datum_cd  \\\n",
        "0         ST   38.860271  -106.566697            S              NAD83   \n",
@@ -257,7 +257,7 @@
        "4  POINT (-106.8453172 38.66443715)  "
       ]
      },
-     "execution_count": 3,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -265,13 +265,13 @@
    "source": [
     "# read in USGS gage locations\n",
     "usgs_fn = Path(\"../../data/usgs_gage_locations/usgs_gages.csv\")\n",
-    "usgs_stations = pd.read_csv(usgs_fn)\n",
+    "usgs_stations = pd.read_csv(usgs_fn, dtype={'site_no': str})\n",
     "usgs_stations.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -306,7 +306,7 @@
        "Name: assigned_name, dtype: object"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -324,7 +324,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
