cleaning up usgs sites

--- a/notebooks/methods/08-in-situ-Data-Cleaning.ipynb
+++ b/notebooks/methods/08-in-situ-Data-Cleaning.ipynb
@@ -1,6 +1,27 @@
 {
  "cells": [
   {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "import numpy as np\n",
+    "from pathlib import Path"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "save_dir = Path(\"../../data/insitu\")\n",
+    "save_dir.mkdir(exist_ok=True)"
+   ]
+  },
+  {
    "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
@@ -11,23 +32,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import pandas as pd\n",
-    "from pathlib import Path"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
     "data_directory = Path(\"../../data/ResOpsUS/\")\n",
-    "save_dir = Path(\"../../data/insitu\")\n",
-    "save_dir.mkdir(exist_ok=True)\n",
     "reservoir_attributes_fn = Path(\"../../data/ResOpsUS/reservoir_attributes.csv\")\n",
     "\n",
     "resops_attributes = pd.read_csv(reservoir_attributes_fn)\n",
@@ -43,6 +52,49 @@
     "\n",
     "    save_fn = save_dir / f\"{reservoir}.csv\"\n",
     "    subset.to_csv(save_fn, index=False)"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# USGS"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The naming convention of USGS gages in RAT can be tricky because the name gets truncated to 5 characters. There may be multiple "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data_directory = Path(\"../../data/usgs_insitu/\")\n",
+    "gage_attributes_fn = Path(\"../../data/usgs_gage_locations/usgs_gages_with_assigned_names.csv\")\n",
+    "\n",
+    "gage_attributes = pd.read_csv(gage_attributes_fn, dtype={'site_no': str})[['site_no', 'assigned_name']]\n",
+    "\n",
+    "for i, row in gage_attributes.iterrows():\n",
+    "    fn = data_directory / f\"{row.site_no}.csv\"\n",
+    "    if fn.exists():\n",
+    "        save_fn = save_dir / f\"{row.assigned_name}.csv\"\n",
+    "\n",
+    "        df = pd.read_csv(fn, parse_dates=['datetime']).rename({\n",
+    "                'datetime': 'date',\n",
+    "                '00060_Mean': 'streamflow'\n",
+    "            }, axis=1)[['date', 'streamflow']]\n",
+    "        df['date'] = df.date.dt.date\n",
+    "        df.loc[df['streamflow'] < 0, 'streamflow'] = np.nan\n",
+    "        df.tail()\n",
+    "\n",
+    "        df.to_csv(save_fn, index=False)"
    ]
   }
  ],
