renamed column from streamflow to inflow for consistency

--- a/notebooks/methods/08-in-situ-Data-Cleaning.ipynb
+++ b/notebooks/methods/08-in-situ-Data-Cleaning.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -72,7 +72,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -88,10 +88,10 @@
     "\n",
     "        df = pd.read_csv(fn, parse_dates=['datetime']).rename({\n",
     "                'datetime': 'date',\n",
-    "                '00060_Mean': 'streamflow'\n",
-    "            }, axis=1)[['date', 'streamflow']]\n",
+    "                '00060_Mean': 'inflow'\n",
+    "            }, axis=1)[['date', 'inflow']]\n",
     "        df['date'] = df.date.dt.date\n",
-    "        df.loc[df['streamflow'] < 0, 'streamflow'] = np.nan\n",
+    "        df.loc[df['inflow'] < 0, 'inflo'] = np.nan\n",
     "        df.tail()\n",
     "\n",
     "        df.to_csv(save_fn, index=False)"
