changed variable name

--- a/notebooks/methods/08-in-situ-Data-Cleaning.ipynb
+++ b/notebooks/methods/08-in-situ-Data-Cleaning.ipynb
@@ -32,9 +32,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Blue_Mesa 541\n",
+      "Morrow_Point 542\n",
+      "Silver_Jack 549\n",
+      "Taylor_Park 536\n"
+     ]
+    }
+   ],
    "source": [
     "data_directory = Path(\"../../data/ResOpsUS/\")\n",
     "reservoir_attributes_fn = Path(\"../../data/ResOpsUS/reservoir_attributes.csv\")\n",
@@ -45,13 +56,14 @@
     "reservoirs = ['Blue_Mesa', 'Morrow_Point', 'Silver_Jack', 'Taylor_Park']\n",
     "for reservoir in reservoirs:\n",
     "    reservoir_id = int(resops_attributes[resops_attributes['DAM_NAME']==reservoir]['DAM_ID'])\n",
+    "    print(reservoir, reservoir_id)\n",
     "\n",
     "    fn = data_directory / f\"ResOpsUS_{reservoir_id}.csv\"\n",
     "\n",
     "    df = pd.read_csv(fn, parse_dates=['date'])\n",
     "\n",
     "    save_fn = save_dir / f\"{reservoir}.csv\"\n",
-    "    subset.to_csv(save_fn, index=False)"
+    "    df.to_csv(save_fn, index=False)"
    ]
   },
   {
