data cleaning cumberland

--- a/notebooks/methods/08-in-situ-Data-Cleaning.ipynb
+++ b/notebooks/methods/08-in-situ-Data-Cleaning.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,11 +13,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
-    "save_dir = Path(\"../../data/insitu\")\n",
+    "save_dir = Path(\"../../data-cumberland/insitu\")\n",
     "save_dir.mkdir(exist_ok=True)"
    ]
   },
@@ -32,29 +32,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Blue_Mesa 541\n",
-      "Morrow_Point 542\n",
-      "Silver_Jack 549\n",
-      "Taylor_Park 536\n"
+      "Barkley_Dam 1752\n",
+      "Laurel_Dam 1754\n",
+      "Wolf_Creek 1756\n",
+      "Dale_Hollow_Dam 1762\n",
+      "Old_Hickory_Dam 1768\n",
+      "J._Percy_Priest_Dam 1775\n",
+      "Center_Hill_Dam 1777\n",
+      "Great_Falls 1787\n",
+      "Cordell_Hull_Dam 7318\n"
      ]
     }
    ],
    "source": [
-    "data_directory = Path(\"../../data/ResOpsUS/\")\n",
-    "reservoir_attributes_fn = Path(\"../../data/ResOpsUS/reservoir_attributes.csv\")\n",
+    "data_directory = Path(\"../../global_data/ResOpsUS/time_series_all\")\n",
+    "reservoir_attributes_fn = Path(\"../../global_data/ResOpsUS/attributes/reservoir_attributes.csv\")\n",
+    "reservoirs_fn = Path(\"../../data-cumberland/cumberland-stations/cumberland-resops-stations.csv\")\n",
     "\n",
     "resops_attributes = pd.read_csv(reservoir_attributes_fn)\n",
     "resops_attributes['DAM_NAME'] = resops_attributes['DAM_NAME'].str.replace(' ', '_')\n",
     "\n",
-    "reservoirs = ['Blue_Mesa', 'Morrow_Point', 'Silver_Jack', 'Taylor_Park']\n",
-    "for reservoir in reservoirs:\n",
+    "reservoirs = pd.read_csv(reservoirs_fn)\n",
+    "\n",
+    "for reservoir in reservoirs['name']:\n",
     "    reservoir_id = int(resops_attributes[resops_attributes['DAM_NAME']==reservoir]['DAM_ID'])\n",
     "    print(reservoir, reservoir_id)\n",
     "\n",
@@ -84,12 +91,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
-    "data_directory = Path(\"../../data/usgs_insitu/\")\n",
-    "gage_attributes_fn = Path(\"../../data/usgs_gage_locations/usgs_gages_with_assigned_names.csv\")\n",
+    "data_directory = Path(\"../../data-cumberland/usgs_insitu/\")\n",
+    "gage_attributes_fn = Path(\"../../data-cumberland/usgs_gage_locations/usgs_gages_with_assigned_names.csv\")\n",
     "\n",
     "gage_attributes = pd.read_csv(gage_attributes_fn, dtype={'site_no': str})[['site_no', 'assigned_name']]\n",
     "\n",
